# project_euler

./: CMakeLists.txt  build.sh
Problem31/: CMakeLists.txt  problem.cpp  problem.hpp  problem31.cpp  problem31.hpp
Template/: CMakeLists.txt  problem.cpp  problem.hpp
include/: common.hpp  definitions.hpp  math.hpp
scripts/: common.sh
src/: main.cpp  math.cpp
